--- a/index.html
+++ b/index.html
@@ -1,1 +1,22 @@
-<!-- nothing here -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <title>Pluralsight</title>
+</head>
+<body>
+    <h1 style="font-size: 18px;">Pluralsight Skills</h1>
+    <h2 style= "font-size: 48px;">Where teams build better technology skills, faster</h2>
+    <p>Technology teams are only as successful as their skills are relevant. Give them access to Pluralsight Skills—courses, assessments, learning paths, and labs and you give them the tech fluency they need to build business-critical skills.</p>
+
+
+        <div class="button"></div>
+        <img src="image/team.png">
+        <p>
+        <a href="index.html" class="btn-try">Try for free</a>
+    </p>
+    </div>
+</body>
+</html>
